# stripe-billing-scenarios

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
scenarios/: conftest.py  test_basic.py  test_monthly.py
